recipes/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casdoor
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
